[package]
name = "uniffi-fixture-struct-default-values"
version = "0.22.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_struct_default_values"

[dependencies]
uniffi = {path = "../../uniffi", version = "0.25" }

[build-dependencies]
uniffi = {path = "../../uniffi", version = "0.25", features = ["build"] }

[dev-dependencies]
uniffi = {path = "../../uniffi", version = "0.25", features = ["bindgen-tests"] }
